--- a/prueba html.html
+++ b/prueba html.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -10,13 +10,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-	<h1>Este es un titulo</h1>
-	<h2> </h2>
-	<audio controls>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-	</audio>
+	<h1>Este es un titulo   22222</h1>
+	<h2> hola </h2>
+	
 
 </body>
 </html>
